.node_modules/syntax-error/test/sources/esm.js
import x from 'y';
export default z;
